--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <meta name="description" content="Jquery-module-pattern : jQuery Module Pattern" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+    
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+        <script type="text/javascript" src="module.js"></script>
+        <script type="text/javascript" src="app.js"></script>
 
     <title>Jquery-module-pattern</title>
   </head>
