--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
     
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-        <script type="text/javascript" src="module.js"></script>
-        <script type="text/javascript" src="app.js"></script>
+        <script type="text/javascript" src="https://raw.github.com/vcabourdin/jQuery-Module-Pattern/master/module.js"></script>
+        <script type="text/javascript" src="https://raw.github.com/vcabourdin/jQuery-Module-Pattern/master/app.js"></script>
 
     <title>Jquery-module-pattern</title>
   </head>
