--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
         <script type="text/javascript" src="app.js"></script>
     </head>
     <body>
+        <div id="demo"></div>
     </body>
 </html>
