--- a/index.html
+++ b/index.html
@@ -16,8 +16,6 @@
   </head>
 
   <body>
-    <div id="demo"></div>
-
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
@@ -36,9 +34,8 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h3>Welcome to GitHub Pages.</h3>
-
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+        <h3>Demo</h3>
+        <div id="demo"></div>
 
 <pre><code>$ cd your_repo_root/repo_name
 $ git fetch origin
