--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h3>Demo</h3>
+        <pre><code>
         <div id="demo"></div>
+        </code></pre>
 
 <pre><code>$ cd your_repo_root/repo_name
 $ git fetch origin
