--- a/index.html
+++ b/index.html
@@ -13,6 +13,19 @@
         <script type="text/javascript" src="https://raw.github.com/vcabourdin/jQuery-Module-Pattern/master/app.js"></script>
 
     <title>Jquery-module-pattern</title>
+    <script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-31417726-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
   </head>
 
   <body>
